--- a/manuscript/supplement.tex
+++ b/manuscript/supplement.tex
@@ -18,7 +18,7 @@
 \pagenumbering{gobble}
 
 \begin{document}
-\title{Supplmentary material to: "Eddy covariance towers as sentinels of abnormal radioactive material releases"}
+\title{Supplementary material to: "Eddy covariance towers as sentinels of abnormal radioactive material releases"}
 \date{}
 \maketitle
 
@@ -30,14 +30,14 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=11cm]{__interaction_uswrc}
-	\caption{Interaction plots at the BE-Bra site between air temperature ($C^{\circ}$) and $CO_2$ (ppm)for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
+	\caption{Interaction plots at the BE-Bra site between air temperature ($^{\circ}C$) and $CO_2$ (ppm) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
 	\label{fig:interaction_bebra}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=11cm]{__interaction_bevie}
-	\caption{Interaction plots at the BE-Vie site between air temperature ($C^{\circ}$) and $CO_2$ (ppm) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
+	\caption{Interaction plots at the BE-Vie site between air temperature ($^{\circ}C$) and $CO_2$ (ppm) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
 	\label{fig:interaction_bevie}
 \end{figure}
 
