--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -73,7 +73,7 @@
 
 % Uncomment to override  the `A preprint' in the header
 \renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.000/XXXXX}}
-\renewcommand{\undertitle}{This is a draft of a Manuscript intended for Environmental Science and Pollution Research \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
+\renewcommand{\undertitle}{This is an Accepted Manuscript of an article in Environmental Science and Pollution Research \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
 \renewcommand{\shorttitle}{Eddy covariance towers as sentinels}
 
 %%% Add PDF metadata to help others organize their library
