--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -72,8 +72,8 @@
 %\date{}
 
 % Uncomment to override  the `A preprint' in the header
-\renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.000/XXXXX}}
-\renewcommand{\undertitle}{This is an Accepted Manuscript of an article in Environmental Science and Pollution Research \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
+\renewcommand{\headeright}{\href{https://doi.org/10.1007/s11356-025-36171-3}{DOI: 10.1007/s11356-025-36171-3}}
+\renewcommand{\undertitle}{This is an Accepted Manuscript of an article in Environmental Science and Pollution Research \\ \href{https://doi.org/10.1000/10.1007/s11356-025-36171-3}{DOI: 10.1000/10.1007/s11356-025-36171-3}}
 \renewcommand{\shorttitle}{Eddy covariance towers as sentinels}
 
 %%% Add PDF metadata to help others organize their library
